fixed contrasts

--- a/webpage/src/components/_EventCard.scss
+++ b/webpage/src/components/_EventCard.scss
@@ -31,6 +31,10 @@
 
     &__description {
         padding: var(--normal-space);
+        font-size: var(--step--1);
+        width: 32ch;
+        margin: 0 auto;
+        color: var(--primary-color);
     }
     
     &__button {
